--- a/html-pages/order-summary.html
+++ b/html-pages/order-summary.html
@@ -24,7 +24,7 @@
         <header>
             <div class="header-contents">
                 <div class="shopcart-logo">
-                    <img src="../styles/media/logos/fusion-mart-logo.svg" alt="">
+                    <img src="../styles/media/logos/fusion-mart-logo.svg" alt="fusion mart logo ">
 
                 </div>
 
@@ -47,7 +47,7 @@
                             </li>
                             <li><a class=" nav-tabs-head  dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="furniture images">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -57,7 +57,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="handbag image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
@@ -66,7 +66,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="shoe image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
@@ -75,7 +75,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="headphone image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
@@ -84,7 +84,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="laptop image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
@@ -93,7 +93,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/book-img.jpg" alt="">
+                                        <img src="../styles/media/images/book-img.jpg" alt="book image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -182,7 +182,7 @@
                             </li>
                             <li><a class=" nav-tabs-head  dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="furniture image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -192,7 +192,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="handbag image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
@@ -201,7 +201,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="shoe image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
@@ -210,7 +210,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="headphone image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
@@ -219,7 +219,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="laptop image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
@@ -228,7 +228,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/book-img.jpg" alt="">
+                                        <img src="../styles/media/images/book-img.jpg" alt="book image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -274,7 +274,7 @@
                         <h4 class="section-title5">Review Item And Shipping</h4>
                         <div class="review-cart">
                             <div class="product-review-img">
-                                <img src="../styles/media/images/headphone-img.jpg" alt="">
+                                <img src="../styles/media/images/headphone-img.jpg" alt=" Selected headphone image">
 
                             </div>
                             <div class="product-cart">
@@ -402,13 +402,13 @@
 
                     <div class="payment-options">
                         <div class="payment-option-img">
-                            <img src="../styles/media/logos/amzon-logo.jpg" alt="">
+                            <img src="../styles/media/logos/amzon-logo.jpg" alt="amazon logo">
                         </div>
                         <div class="payment-option-img">
-                            <img src="../styles/media/logos/payment.jpg" alt="">
+                            <img src="../styles/media/logos/payment.jpg" alt="MasterCard logo">
                         </div>
                         <div class="payment-option-img">
-                            <img src="../styles/media/logos/visa.jpg" alt="">
+                            <img src="../styles/media/logos/visa.jpg" alt=" visa logo">
                         </div>
 
                     </div>
