--- a/html-pages/product-details-page.html
+++ b/html-pages/product-details-page.html
@@ -48,7 +48,7 @@
                             </li>
                             <li><a class=" nav-tabs-head  dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="furniture image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -58,7 +58,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="handbag image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
@@ -67,7 +67,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="shoes image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
@@ -76,7 +76,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="headphone image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
@@ -85,7 +85,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="laptop image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
@@ -94,7 +94,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/book-img.jpg" alt="">
+                                        <img src="../styles/media/images/book-img.jpg" alt="book image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -184,7 +184,7 @@
                             </li>
                             <li><a class=" nav-tabs-head  dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="furniture image ">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -194,7 +194,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="handbag image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
@@ -203,7 +203,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="shoe image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
@@ -212,7 +212,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="headphone image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
@@ -221,7 +221,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="laptop image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
@@ -230,7 +230,7 @@
                                 </a></li>
                             <li><a class=" nav-tabs-head dropdown-list" href="#">
                                     <div class="nav-img-container">
-                                        <img src="../styles/media/images/book-img.jpg" alt="">
+                                        <img src="../styles/media/images/book-img.jpg" alt="book image">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -324,21 +324,21 @@
                         </div>
                     </div>
                     <div class="product-img">
-                        <img src="../styles/media/images/headphone-img.jpg" alt="">
+                        <img src="../styles/media/images/headphone-img.jpg" alt="slected headphone image">
 
                     </div>
                     <div class=" product-colors-container">
                         <div class="product-colors-img">
-                            <img src="../styles/media/images/color-headphone.jpg" alt="">
+                            <img src="../styles/media/images/color-headphone.jpg" alt="yellow color headphone image">
                         </div>
                         <div class="product-colors-img">
-                            <img src="../styles/media/images/color-headphone2.jpg" alt="">
+                            <img src="../styles/media/images/color-headphone2.jpg" alt="steel blue color headphone image">
                         </div>
                         <div class="product-colors-img">
-                            <img src="../styles/media/images/headphone4.jpg" alt="">
+                            <img src="../styles/media/images/headphone4.jpg" alt="orange color headphone image">
                         </div>
                         <div class="product-colors-img">
-                            <img src="../styles/media/images/headphone7.jpg" alt="">
+                            <img src="../styles/media/images/headphone7.jpg" alt="peach color headphone image">
                         </div>
                     </div>
                 </div>
@@ -484,7 +484,7 @@
                 <div class="index-footer">
                     <div class="footer-col1">
                         <div class=" shopcart-logo  m-b-32">
-                            <img src="../styles/media/logos/fusion-mart-logo.svg" alt="">
+                            <img src="../styles/media/logos/fusion-mart-logo.svg" alt="fusion mart logo image">
 
                         </div>
                         <p class="m-b-40">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nobis eligendi
@@ -493,28 +493,28 @@
                         <h6 class="payment-title m-b-20">Accepted Payments</h6>
                         <div class="payment-logos-conatiner">
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-1.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-1.png" alt="stripe  logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-2.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-2.png" alt="visa logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-3.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-3.png" alt="MasterCard logo ">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-4.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-4.png" alt="amazon logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-5.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-5.png" alt="klarna. logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-6.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-6.png" alt="paypal logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-7.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-7.png" alt="apple pay logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-8.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-8.png" alt="google pay logo">
                             </div>
 
                         </div>
