--- a/index.html
+++ b/index.html
@@ -336,36 +336,36 @@
                 <h3 class="section-title2">Shop Our Top Categories</h3>
                 <div class="shop-categ-cards-container">
                     <div class="shop-categ-card">
-                        <img src="./styles/media/images/living-room.jpg" alt="">
+                        <img src="./styles/media/images/living-room.jpg" alt=" this is living room furniture image" >
                         <p>Furniture</p>
 
                     </div>
                     <div class="shop-categ-card">
-                        <img src="./styles/media/images/bags.jpg" alt="">
+                        <img src="./styles/media/images/bags.jpg" alt="this is handbag image">
 
                         <p>Hand Bag</p>
 
                     </div>
                     <div class="shop-categ-card">
-                        <img src="./styles/media/images/books.jpg" alt="">
+                        <img src="./styles/media/images/books.jpg" alt="this a books image">
 
                         <p>Books</p>
 
                     </div>
                     <div class="shop-categ-card">
-                        <img src="./styles/media/images/laptop.jpg" alt="">
+                        <img src="./styles/media/images/laptop.jpg" alt="this is laptop image">
 
                         <p>Laptop </p>
 
                     </div>
                     <div class="shop-categ-card">
-                        <img src="./styles/media/images/shoe.jpg" alt="">
+                        <img src="./styles/media/images/shoe.jpg" alt="this is shoe image">
 
                         <p>Shoes </p>
 
                     </div>
                     <div class="shop-categ-card">
-                        <img src="./styles/media/images/travel-bag.jpg" alt="">
+                        <img src="./styles/media/images/travel-bag.jpg" alt="this is traveling bag image">
 
                         <p>Traving Bag</p>
 
@@ -385,7 +385,7 @@
                 <div class="Trending-Products">
                     <div class="card Products-card" style="width: 100%;">
                         <div  class="card-product-img">
-                            <img src="./styles/media/images/room-img.jpg" alt="">
+                            <img src="./styles/media/images/room-img.jpg" alt="this is furniture image">
                         </div>
                         
                         <div class="card-body">
@@ -396,7 +396,7 @@
                     </div>
                     <div class="card Products-card" style="width: 100%;">
                         <div class="card-product-img">
-                            <img src="./styles/media/images/fashion-shirts.jpg" alt="">
+                            <img src="./styles/media/images/fashion-shirts.jpg" alt="this is fasionable shirt image">
                         </div>
                        
                         <div class="card-body">
@@ -524,28 +524,28 @@
                         <h6 class="payment-title m-b-20">Accepted Payments</h6>
                         <div class="payment-logos-conatiner">
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-1.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-1.png" alt="stripe  logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-2.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-2.png" alt="visa logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-3.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-3.png" alt="MasterCard logo ">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-4.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-4.png" alt="amazon logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-5.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-5.png" alt="klarna. logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-6.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-6.png" alt="paypal logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-7.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-7.png" alt="apple pay logo">
                             </div>
                             <div class="payment-logo">
-                                <img src="../styles/media/logos/pay-logo-8.png" alt="">
+                                <img src="../styles/media/logos/pay-logo-8.png" alt="google pay logo">
                             </div>
 
                         </div>
